Addl. text on lead sheets in ch. 1

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -232,6 +232,36 @@
 
 % }}}
 
+% Lead sheet notation {{{
+
+\fntext{ls-1}{%
+  It is worth mentioning that not all jazz musicians read music; jazz is
+  largely an aural tradition, and many early jazz musicians did not read,
+  instead learning the music by ear. For students learning jazz today,
+  however, learning to read chord changes is an essential part of their
+  training. For an ethnomusicological survey of jazz musicians' relationships
+  with lead sheets, see \cite[71--76]{berliner:1994}.}
+
+\fntext{ls-2}{%
+  This lead sheet is taken from the older, illegal \emph{Real Book} (249).
+  While the newer Hal Leonard edition maintains most of the original selections,
+  in some cases they do not: ``Just Friends'' does not appear until vol.~4 of
+  the Hal Leonard \emph{Real Book}.}
+
+\fntext{ls-3}{%
+  Jamey Aebersold publishes a free book on his website that serves as an
+  introduction to the very basics of jazz; the section titled ``Nomenclature''
+  is especially useful for deciphering chord symbols.
+  \headlesscite[15]{aebersold:handbook}.}
+
+\fntext{ls-4}{%
+  \cite[21]{levine:piano}. Realizing chord symbols is perhaps most important
+  for pianists and guitarists (who are most often charged with realizing them in
+  performance), and any introductory text on these instruments will be filled
+  with voicings to be used in different situations.}
+
+% }}}
+
 % Diatonic Chord Space {{{
   % Intervals and transformations{{{{
 \fntext{ds-2a}{%
@@ -414,7 +444,6 @@
   analysis here, that all of the perceived tonics in the first sixteen bars
   (\Aflat, C, \Eflat, G) spell out the tonic major-seventh chord;
   \cite[19]{martin:1988} makes this observation.}
-
 
   % }}}}
 
