--- a/ch1.tex
+++ b/ch1.tex
@@ -505,8 +505,6 @@ continuous tetrachordal space can accommodate \emph{all} four-note chords, but,
 as Hook notes, Tymoczko downplays (and sometimes ignores) the transformational
 aspects of his geometric models.\fn{tt-6}
 
-% xxx More here, esp. on cross-type stuff
-
 Though I have mentioned these cross-type transformational works only in
 passing here, we will return to some of them in some detail below, where they
 will be more relevant. Because Hook does not strictly define what constitutes
@@ -514,6 +512,82 @@ a “type” in a cross-type transformation, his formulation will allow us to
 apply transformational procedures rigorously in situations where we might wish
 to consider objects to be members of different types, even though they may be
 identical in some other typological system.\fn{tt-7}
+
+%}}}
+
+% xxx I hate this title
+\section{Aside: Lead Sheet Notation}
+\label{sec:lead-sheets} %{{{
+
+As mentioned in Section \ref{sec:problems-jazz-analysis}, jazz musicians often
+begin learning a particular tune with a lead sheet, and the changes found
+there form the harmonic foundation of a particular performance. Because this
+dissertation is interested in jazz harmony generally, lead sheets serve as a
+useful abstraction of the countless possible instantiations of any one tune,
+and considering them them briefly here will prove fruitful for the rest of
+this study.\fn{ls-1}
+
+\begin{figure}[p]
+  \centerGraphic[width=\textwidth]{eps/ch1/just-friends.pdf}
+  \caption{A sample lead sheet of ``Just Friends'' (John Klenner/Sam Lewis).}
+  \label{ls:just-friends}
+\end{figure}
+
+A lead sheet typically gives only a melody and a set of chord changes: Figure
+\ref{ls:just-friends} gives the \emph{Real Book} lead sheet for John Klenner
+and Sam Lewis's ``Just Friends.''\fn{ls-2} It is a very typical example, and
+nearly everything about the page is designed to make it easy for a jazz
+musician to ``fake'' a performance of the tune on the bandstand: the anonymous
+compilers of the book provide the composer and lyricist's names and a sample
+recording; the music is split into four-measure chunks to make the phrases and
+the form of the tune clear; and there is almost no extraneous
+information---even the key signature is omitted on all lines but the first.
+The melody is given for the head, and the changes are provided for the rhythm
+section (usually piano, bass, and drums, but sometimes other instruments like
+guitar) and for solos. All other aspects of the tune need to be negotiated
+prior to performance (how the tune will begin and end, for example).
+
+\emph{The Real Book} uses standard conventions for labeling chords. A chord
+symbol consists of the chord root (referred to by a letter name), and a symbol
+indicating the quality: the most common of these are are the dominant seventh
+(simply ``$7$''), minor seventh (``--$7$'') and major seventh (``maj$7$'').\fn{ls-3}
+Thus, the opening of ``Just Friends'' (\h{G7}--\h{Cmaj7}) consists of a G
+dominant seventh chord moving to a C major seventh chord. This abstraction is
+extremely useful for a performing musician, but leaves something to be desired
+if pressed into use as an analytical system. The chord symbols do not
+explicitly tell us, for example, that \h{G7}--\h{Cmaj7} is a typical
+V\tsup{7}--I\tsup{7} progression in C major; that kind of knowledge is
+implicit for experienced musicians and analysts.
+
+Complicating the problem somewhat is that chord symbols are imprecise by
+design. In most situations, jazz musicians do not want to be told exactly what
+notes they should play (if they did, they probably wouldn't have become jazz
+musicians); instead, they treat chord symbols only as guidelines. A \h{G7}
+chord would certainly include the root, third, and seventh (G, B, and F), but
+might also include the \h{s11} (C\sharp), \h{b9} (\Aflat), or \h{s5} (D\sharp),
+depending on the situation: the melody might suggest certain alterations, a
+performer might prefer some alterations over others, or an improvisor may work
+themselves into a dissonant portion of a solo where a bare dominant seventh in
+the piano would sound especially out of place.
+
+\begin{figure}[htbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{Two piano realizations of ``Just Friends.''}
+  \label{ls:just-friends-realizations}
+\end{figure}
+
+To illustrate the flexibility of chord symbols, Figure
+\ref{ls:just-friends-realizations} gives two realizations of the first eight
+measures of ``Just Friends.'' The first is Mark Levine's, from early in his
+book on jazz piano; it uses what he calls ``three-note voicings'' (the root,
+third, and seventh).\fn{ls-4} The second realization is my own, and features
+many alterations to the basic outlines given by the chord symbols. Both of
+these realizations are valid interpretations of the given chord symbols, and
+are meant to reinforce the point that chord symbols, while only a guideline,
+indeed represent something important about a given harmonic progression. For
+all of their imprecision, chord symbols represent a reality for performing
+jazz musicians, and as such will be foundational for our work on harmony here.
+
 
 %}}}
 
