--- a/diss.bib
+++ b/diss.bib
@@ -10,8 +10,17 @@ Theory} }
   series      = {Jamey Aebersold Play-A-Long Series, vol.~3}
 }
 
+@book{aebersold:handbook,
+  author      = {Aebersold, Jamey},
+  title       = {Jazz Handbook},
+  address     = {New Albany, IN},
+  publisher   = {Jamey Aebersold Jazz},
+  year        = {2010},
+  url         = {http://www.jazzbooks.com/mm5/download/FQBK-handbook.pdf}
+}
+
 @book{aebersold:omnibook,
-  editor      = {Aebersold, Jamie},
+  editor      = {Aebersold, Jamey},
   title       = {Charlie Parker Omnibook},
   publisher   = {Atlantic Music Corp.},
   year        = {1978}
@@ -41,6 +50,15 @@ Theory} }
   address     = {Boston},
   publisher   = {Berklee Press},
   year        = {2013}
+}
+
+@book{berliner:1994,
+  author      = {Berliner, Paul},
+  title       = {Thinking in Jazz},
+  subtitle    = {The Infinite Art of Improvisation},
+  address     = {Chicago},
+  publisher   = {University of Chicago Press},
+  year        = {1994}
 }
 
 @article{biamonte:2008,
@@ -449,6 +467,14 @@ Theory} }
   address     = {Petaluma, CA},
   publisher   = {Sher Music},
   year        = {1995}
+}
+
+@book{levine:piano,
+  author      = {Levine, Mark},
+  title       = {The Jazz Piano Book},
+  address     = {Petaluma, CA},
+  publisher   = {Sher Music},
+  year        = {1989}
 }
 
 @book{lewin:gmit,
