Add lead sheet graphics in first chapter.

--- a/ch1.tex
+++ b/ch1.tex
@@ -571,8 +571,16 @@ themselves into a dissonant portion of a solo where a bare dominant seventh in
 the piano would sound especially out of place.
 
 \begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption{Two piano realizations of ``Just Friends.''}
+  \centerGraphic{eps/ch1/just-friends-realizations.pdf}
+  \captionsetup{format=hang}
+  \caption[Two piano realizations of ``Just Friends,'' mm.~1--8.]{%
+    Two piano realizations of ``Just Friends,'' mm.~1--8. \\
+    a\rightparen\ Using three-note voicings (from Mark Levine, \emph{The Jazz
+      Piano Book}). \\
+    b\rightparen\ Using more alterations/extensions (chord symbols reflect
+    voicings used).
+
+}
   \label{ls:just-friends-realizations}
 \end{figure}
 
