Clean up ch. 1 text per JH comments.
Includes cleaner mathematical notation for function composition and a
variety of disambiguation edits.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -328,8 +328,8 @@
   between Cartesian \gis{} thinking and what he calls “anti-Cartesian”
   transformational thinking is the central theme of \emph{GMIT}; see
   \headlesscite{klumpenhouwer:2006}. For more on the “transformational
-  attitude,” see \cite[24--29]{rings:2011}; \cite{satyendra:2004}; and
-  \cite[172--77]{hook:2007gmit}.}
+  attitude,” see \cite[24--29]{rings:2011}; \cite[102--3 and
+  116--17]{satyendra:2004}; and \cite[172--77]{hook:2007gmit}.}
 
 \fntext{ds-7}{%
   Ramon Satyendra describes the two attitudes as being noun-oriented (\gis{}es)
@@ -340,10 +340,8 @@
   in \headlesscite[172--77]{hook:2007gmit}.}
 
 \fntext{ds-9}{%
-  The operator $t_k$ is described in as a “generic transposition operator” in
-  \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
-  since I am interested at this point only in its application to the G-minor
-  diatonic set S.}
+  The diatonic transposition operator $t_k$ is described in
+  \cite[139--40]{hook:2008}.}
 
 \fntext{ds-10}{%
   The intervals chosen for measurement in the \gis{} do have an impact on the
@@ -359,6 +357,17 @@
   Lewin’s definition of a transformation network appears is at
   \headlesscite[196]{lewin:gmit}. We will delay an in-depth explanation until
   the next chapter, at which point it will be more relevant.}
+
+\fntext{ds-11b}{%
+  The symbol $\odot$ here represents function composition from left-to-right:
+  $t_4 \odot t_3$ is read as ``$t_4$ followed by $t_3$.'' Mathematicians
+  often use right-to-left orthography: $g(f\,(x))$ indicates ``apply $f\,$ to $x$,
+  then apply $g$ to its result''; this is often indicated $g \circ f$. (Lewin uses
+  left-to-right notation in \emph{GMIT}; see p.~2.) In this dissertation we
+  will often be considering longer chains of transformations where right-to-left
+  orthography would quickly become tedious, so we will use the symbol $\odot$
+  exclusively to mean function composition from left to right. This usage
+  follows that of Julian Hook, see \headlesscite[Section 2.3]{hook:mst}.}
 
 \fntext{ds-11}{%
   This observation has not gone unrecognized by jazz musicians: at least one
