--- a/diss.bib
+++ b/diss.bib
@@ -339,6 +339,18 @@ Theory} }
   year        = {2007}
 }
 
+@incollection{hook:2008,
+  author      = {Hook, Julian},
+  editor      = {Douthett, Jack and Hyde, Martha M. and Smith, Charles J.},
+  booktitle   = {Music Theory and Mathematics: Chords, Collections, and
+                Transformations},
+  title       = {Signature Transformations},
+  address     = {Rochester},
+  publisher   = {University of Rochester Press},
+  pages       = {137--60},
+  year        = {2008}
+}
+
 @review{hook:2011,
   author      = {Hook, Julian},
   title       = {Review of Dmitri Tymoczko, \textit{A Geometry of Music:
