Add note about hearing All the Things in Ab.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -427,6 +427,14 @@
   \emph{Real Book} as well as another illegal fake book called simply \emph{The
   Book} both omit this chord.)}
 
+\fntext{ds-18b}{%
+  I tend to hear the opening of ``All the Things You Are'' in F minor, though
+  it is certainly possible to hear it in \Aflat\ major instead. In either
+  case, the diatonic \gis is nearly identical; the only difference is the
+  quality of the C chord (\h{Cm7} in \Aflat, and \h{C7} in F minor). Readers
+  who prefer to hear the opening in \Aflat\ can easily make the necessary
+  alterations to the commentary here.}
+
 \fntext{ds-19}{%
   Again, this implicit diatonicism has not gone unnoticed; Ahmad Jamal arrives
   emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
@@ -450,8 +458,8 @@
 
 \fntext{ds-22}{%
   Hearing the third-relations does have the nice side effect, absent from our
-  analysis here, that all of the perceived tonics in the first sixteen bars
-  (\Aflat, C, \Eflat, G) spell out the tonic major-seventh chord;
+  analysis here, that all of the phrase-ending major-sevenths in the first
+  sixteen bars (\Aflat, C, \Eflat, G) spell out the tonic major-seventh chord;
   \cite[19]{martin:1988} makes this observation.}
 
   % }}}}
