--- a/ch1.tex
+++ b/ch1.tex
@@ -1049,7 +1049,7 @@ otherwise go unnoticed.
 
 “All the Things You Are” begins in the key of F minor, and progresses through
 a diatonic cycle (a chain of $t_3$ operations in an F-minor diatonic
-seventh-chord \gis{}) until arriving on \h{DbM7} in m.~5. At this point, the
+seventh-chord \gis{}) until arriving on \h{DbM7} in m.~5.\fn{ds-18b} At this point, the
 chord roots continue to descend by diatonic fifth in the key of F minor, but
 the qualities of the chords rooted on G and C have been altered, from
 \h{Gm7b5} and \h{C7} (as they would be in the F-minor \gis{}) to \h{G7} and
