Minor changes to ch. 2, outline remaining text.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -140,7 +140,7 @@
   % xxx citation of "Bird Blues"
   This progression is often known as the ``Bird Blues,'' though Mark Levine
   calls it the ``descending blues'' (\headlesscite[228]{levine:1995}). Like many
-  sets of Parker changes, there are many different versions; the changes here
+  sets of Parker changes, several different versions exist; the changes here
   represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
   vi chord) instead of \h{FM7} in m.~10; Levine's \emph{Jazz Theory Book} gives
   \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3;
