--- a/ch2.tex
+++ b/ch2.tex
@@ -359,6 +359,7 @@ the chord symbols.\fn{tf-13}
 %}}}
 
 
+
 \section{\tf\ Space: Tritone Substitutions}
 %{{{
 
@@ -503,7 +504,7 @@ motion from \h{DbM7} to \h{Dm7} in mm.~5--6 of ``Ceora'' is indeed a typical
 %}}}
 
 
-\subsection{Analytical Applications}
+\subsection{Analytical Interlude: Charlie Parker, ``Blues for Alice''}
 %{{{
 
 Equipped with these new tritone-substitution transformations, we can now
@@ -621,7 +622,20 @@ space often demand other explanations.
 
 %}}}
 
+\section{\tf Space: Some Extensions}
+%{{{
 
+\subsection{Minor Tonic Chords}
+%{{{
+
+%}}}
+
+% other kind of tonics (general ResI transformation)
+
+% interaction with diatonic spaces
+
+
+%}}} extensions
 
 %%% Local Variables:
 %%% TeX-master: "diss"
