Move some explanation from footnotes to preface.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -277,13 +277,6 @@
   different solo patterns possible over the diatonic cycle in all twelve major
   and minor keys.}
 
-\fntext{ds-2}{%
-  In running text, dominant seventh chords are given with just a “\h{7},” major
-  sevenths with “\h{M7},” minor sevenths with “\h{m7},” and half-diminished sevenths
-  with “\h{m7b5}”. In a minor key the tonic chord is often played with a
-  major seventh, which is indicated “\h{mM7}.” In examples, chord symbols
-  typically follow conventions used by \emph{The Real Book}.}
-
 \fntext{ds-2c}{%
   \Cite[Definition 2.3.1 (26)]{lewin:gmit}. \emph{GMIT} contains many terms
   that Lewin renders in all capitals; I have rendered them here in small
@@ -359,15 +352,8 @@
   the next chapter, at which point it will be more relevant.}
 
 \fntext{ds-11b}{%
-  The symbol $\odot$ here represents function composition from left-to-right:
-  $t_4 \odot t_3$ is read as ``$t_4$ followed by $t_3$.'' Mathematicians
-  often use right-to-left orthography: $g(f\,(x))$ indicates ``apply $f\,$ to $x$,
-  then apply $g$ to its result''; this is often indicated $g \circ f$. (Lewin uses
-  left-to-right notation in \emph{GMIT}; see p.~2.) In this dissertation we
-  will often be considering longer chains of transformations where right-to-left
-  orthography would quickly become tedious, so we will use the symbol $\odot$
-  exclusively to mean function composition from left to right. This usage
-  follows that of Julian Hook, see \headlesscite[Section 2.3]{hook:mst}.}
+  Recall the discussion in the preface (page \pageref{sec:notes-to-reader}):
+  the symbol $\odot$ here represents function composition from left-to-right.}
 
 \fntext{ds-11}{%
   This observation has not gone unrecognized by jazz musicians: at least one
