--- a/ch1.tex
+++ b/ch1.tex
@@ -618,7 +618,7 @@ on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians sometimes ref
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
 in the G-minor diatonic collection.\fn{ds-2b} As in classical music, the leading
 tone is raised in the dominant chord so that the resulting chord is \h{D7}, not
-\h{Dm7}.\fn{ds-2} We can easily arrange this progression around the familiar
+\h{Dm7}. We can easily arrange this progression around the familiar
 circle of fifths, placing the tonic G minor at the top of the circle (see
 Figure \ref{ds:circle-of-fifths}).
 
