--- a/front.tex
+++ b/front.tex
@@ -145,6 +145,7 @@ defense date
 \phantomsection
 \section*{Notes to the Reader}
 \addcontentsline{toc}{section}{Notes to the Reader}
+\label{sec:notes-to-reader}
 
 \doublespacing
 References to recordings in this dissertation are generally made only by
@@ -155,11 +156,37 @@ When discussing a particular piece of jazz, the words “piece,” “compositio
 and “work” all seem out of place. In general, I have adopted the word “tune”
 to mean roughly “the basic structure of a work, including (primarily) its
 melody and chord changes.” This is in keeping with the way jazz musicians use
-the word: they may refer to a “16-bar tune,' a “rhythm changes tune,” or “one
+the word: they may refer to a ``16-bar tune,'' a “rhythm changes tune,” or “one
 of my favorite tunes” (all referring to the abstract structure of the tune and
 not simply the melody). When I am referencing a \emph{particular}
 instantiation of a work (e.g.~Bill Evans’s recording of “Autumn Leaves” from
 \emph{Portrait in Jazz}), I will make that clear.
+
+In running text, dominant seventh chords are indicated with just a “\h{7},”
+major sevenths with “\h{M7},” minor sevenths with “\h{m7},” and
+half-diminished sevenths with “\h{m7b5}”. In a minor key the tonic chord is
+often played with a major seventh, which is indicated “\h{mM7}.” The
+progression \h{Dm7}--\h{G7}--\h{CM7} thus indicates a D minor seventh moving
+to a G dominant seventh moving to a C major seventh chord. In examples, chord
+symbols typically follow conventions used by \emph{The Real Book}.
+
+There are two ways mathematicians notate function composition: left-to-right
+and right-to-left. When combining two functions, $f\,$ followed $g$,
+right-to-left orthography writes $g(f\,(x))$, while left-to-right orthography
+writes $(fg)(x)$. Right-to-left orthography is familiar to most readers, and
+we will use it when talking about transformations as functions: statements of
+the form $f\,(x)$ should be read from right to left. (David Lewin uses
+left-to-right notation throughout \emph{Generalized Musical Intervals and
+Transformations}.) When discussing strings of transformations, however,
+right-to-left orthography can be confusing: $L(P\,(x))$ indicates the $P$
+operation applied to some object $x$, followed by the $L$ operation (it is
+easy to see how the problem can proliferate when there are multiple operations
+involved). To get around this problem, we will use left-to-right orthography
+denoted by the symbol $\odot$; the operation $P\,$ followed by the operation
+$L$ is notated $P \odot L$.\footnote{This use follows that of Julian Hook; see
+\headlesscite[Section 2.3]{hook:mst}.} This combination of notation seems
+intuitive, but we will be explicit in situations where the orthography may be
+confusing.
 
 % }}}
 
