Some preliminary text on minor tonic chords.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -176,6 +176,15 @@
 
 %}}}
 
+%{{{ Extensions
+
+\fntext{tfe-1}{%
+  % xxx citation needed
+}
+
+
+%}}}
+
 %%% Local Variables: %%%
 %%% mode: LaTeX %%%
 %%% TeX-master: "diss" %%%
