--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -226,7 +226,9 @@
 % text shortcuts
 \newcommand{\tf}{\mbox{ii--V}\xspace}
 \newcommand{\tfo}{\mbox{ii--V--I}\xspace}
+\newcommand{\tfmo}{\mbox{ii--V--i}\xspace}
 \newcommand{\tft}{TF\tsub{T}\xspace}
+\newcommand{\tfmt}{tf\tsub{T}\xspace}
 \newcommand{\slideS}{\textsc{slide}\textsuperscript{7}\xspace}
 \newcommand{\tsub}{\textsubscript}
 \newcommand{\tsup}{\textsuperscript}
@@ -244,8 +246,9 @@
 \newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
-\newcommand{\Smin}{\ensuremath{S_{\mathrm{min}}}}
-\newcommand{\Sdom}{\ensuremath{S_{\mathrm{dom}}}}
-\newcommand{\Smaj}{\ensuremath{S_{\mathrm{maj}}}}
+\newcommand{\Smin}{\ensuremath{S_{\mathrm{min}}}\xspace}
+\newcommand{\Sdom}{\ensuremath{S_{\mathrm{dom}}}\xspace}
+\newcommand{\Smaj}{\ensuremath{S_{\mathrm{maj}}}\xspace}
+\newcommand{\SmM}{\ensuremath{S_{\mathrm{mM7}}}\xspace}
 
 %% end mjmdiss.sty %%
