--- a/ch2.tex
+++ b/ch2.tex
@@ -19,6 +19,7 @@ enhanced with the chromatic spaces introduced here.
 
 % xxx this title is stupid
 \section{\tf\ Space: An Initial Pass}
+\label{sec:tf-space-1}
 %{{{
 
 \subsection{Formalism}
@@ -627,6 +628,91 @@ space often demand other explanations.
 
 \subsection{Minor Tonic Chords}
 %{{{
+
+As it has been developed thus far, \tf space has a glaring omission: it
+requires that all tonic chords be major sevenths. Certainly there are
+jazz tunes in minor keys, and thus a need to account for the tonic minor. We
+have certainly seen \tf progressions that resolve to minor chords---we called
+that transformation ``EC'' in the previous section---but the only minor chords
+in the space are ii chords, not tonics. One of the advantages of \tf space is
+that it is easily extended to account for harmonic features specific to
+particular situations; in this section, we will do so to allow for stable
+minor tonic chords.
+
+The minor \tfmo progression is usually played as
+\mbox{\h{ii7b5}--\h{V7b9}--\h{i\thinspace{}mM7}}: all of the chords are diatonic in
+the harmonic minor key, which results in the flatted fifth in the ii chord
+(\flat\sd6), the flatted ninth of the V chord (again, \flat\sd6), and the
+major seventh in the minor tonic chord (the leading tone).\fn{tfe-1} Because
+we are working with ordered triples of only roots, thirds, and sevenths in
+this chapter, the alteration of the fifth and ninth have no effect on our
+definitions of \Smin and \Sdom (defined in Section \ref{sec:tf-space-1}
+above). We do, however, need to formally define the set of minor-major seventh
+chords (chords with a minor third and major seventh):
+
+\vspace{.5\baselineskip}
+  $\SmM = \{ (x_r, x_t, x_s)\ |\ x_t - x_r = 3; x_s - x_r = 11 \}$
+\vspace{.5\baselineskip}
+
+Now that we have defined the set of minor-major seventh chords, we can explore
+how this set interacts with the three we already know. The \textsc{3rd}
+transformation works intuituitively, and transforms a major seventh chord to a
+minor-major seventh with the same root:
+
+\vspace{.5\baselineskip}
+  \h{3}\textsc{rd}$(X\,) = Y$, where $X = (x_r, x_t, x_s) \in \Smaj$ and
+  $Y=(\,y_r, y_t, y_s)=(x_r, x_t-1, x_s) \in \SmM$
+\vspace{.5\baselineskip}
+
+\noindent Likewise, the \textsc{7th} transformation is useful to transform a
+major-minor seventh into a minor-minor seventh with the same root:
+
+\vspace{.5\baselineskip}
+  \h{7}\textsc{th}$(Y\,) = Z$, where $Y = (\,y_r, y_t, y_s) \in \SmM$ and
+  $Z=(z_r, z_t, z_s)=(\,y_r, y_t, y_s-1) \in \Smin$
+\vspace{.5\baselineskip}
+
+\noindent It will also be useful to define versions of the TF and \tft
+transformations that transform a dominant seventh into a \emph{minor} tonic,
+equivalent to TF $\odot$ \textsc{3rd} or \tft $\odot$ \textsc{3rd}. We will
+call them simply ``tf'' and ``\tfmt'' (the lowercase here is meant to parallel
+the use of lowercase letters to indicate minor triads):
+
+\vspace{-3em}
+\begin{alignat*}{3}
+    \mathrm{tf}\,(X\,) = Y\text{, where}\ X = (x_r, x_t, x_s) \in \Sdom
+    & \text{ and}\ &
+    Y &= (\,y_r, y_t, y_s) = (x_r + 5, x_s - 2, x_t) \in \SmM \\
+    %
+    \mathrm{tf}_\mathrm{T}(X\,) = Y\text{, where}\ X = (x_r, x_t, x_s) \in \Sdom
+    & \text{ and}\ &
+    Y &= (\,y_r, y_t, y_s) = (x_r - 1, x_s + 4, x_t + 6) \in \SmM
+\end{alignat*}
+\vspace{-3em}
+
+\noindent Note that unlike the standard TF and \tft transformations, tf and
+\tfmt only transform V\tsup{7} chords to I\tsup{7} chords; the same
+transformations do \emph{not} hold for ii\tsup{7} to V\tsup{7}.
+
+\begin{figure}[thbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{A small portion of \tf space, including minor tonic chords.}
+  \label{tfe:tf-minor-tonics}
+\end{figure}
+
+Figure \ref{tfe:tf-minor-tonics} shows a small portion of \tf space including
+minor tonic chords (we might call it \tfo/i space). Because most jazz tunes do
+not contain exclusively minor chords, this figure gives both major and minor
+tonic chords in every key. The transformations defined in the previous
+paragraph are readily apparent in the space; worthy of special attention is
+the new relationship between a tonic minor-major seventh and the ii\tsup{7}
+chord a fifth below---between \h{CmM7} and \h{Cm7}, for example. Though we
+will not do so here, determining how to fill in the figure with tritone
+substitutions, or to conform it around the circle of fifths in the manner of
+Figure \ref{tf:tf-circle-fifths}, is easy enough to imagine (if not to draw,
+given the added complexity of the minor-major sevenths).
+
+% need an example here: black orpheus?
 
 %}}}
 
