Finish sect. on minor tonics, with Solar analysis.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -179,8 +179,20 @@
 %{{{ Extensions
 
 \fntext{tfe-1}{%
-  % xxx citation needed
-}
+  The extensions used in the dominant chord in a minor \tf is quite flexible:
+  Aebersold's \emph{II--V\tsup{7}--I Progression} gives the quality as \h{7s9},
+  but Mark Levine usually gives the chord symbol simply as ``alt.'' Levine
+  includes the minor \tf in the category of ``melodic minor scale harmony,'' and
+  ``alt.'' is short for the ``altered scale'' (the seventh mode of melodic
+  minor). The G altered scale is
+  G--\Aflat--\Bflat--B\nat--C\sharp--\Eflat--F\nat--G, and is sometimes called
+  the “diminished whole-tone” scale, since it begins as an octatonic scale and
+  ends as a whole-tone scale, or the “super-locrian” scale, the locrian mode
+  with a flatted fourth. This sound could be expressed with a number of
+  different chord symbols---\h{G7(b9s9s11b13)} or \h{G7(b5s5b9s9)}, for
+  example---so jazz musicians typically write “alt.” See
+  \headlesscite[70--77]{levine:1995}. We will return to this equivalence
+  between chords and scales in Chapter 4.}
 
 
 %}}}
