--- a/ch2.tex
+++ b/ch2.tex
@@ -640,10 +640,7 @@ particular situations; in this section, we will do so to allow for stable
 minor tonic chords.
 
 The minor \tfmo progression is usually played as
-\mbox{\h{ii7b5}--\h{V7b9}--\h{i\thinspace{}mM7}}: all of the chords are diatonic in
-the harmonic minor key, which results in the flatted fifth in the ii chord
-(\flat\sd6), the flatted ninth of the V chord (again, \flat\sd6), and the
-major seventh in the minor tonic chord (the leading tone).\fn{tfe-1} Because
+\mbox{\h{ii7b5}--\h{V7s9}--\h{i\thinspace{}mM7}}.\fn{tfe-1} Because
 we are working with ordered triples of only roots, thirds, and sevenths in
 this chapter, the alteration of the fifth and ninth have no effect on our
 definitions of \Smin and \Sdom (defined in Section \ref{sec:tf-space-1}
@@ -695,24 +692,54 @@ the use of lowercase letters to indicate minor triads):
 transformations do \emph{not} hold for ii\tsup{7} to V\tsup{7}.
 
 \begin{figure}[thbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch2/tf-minor-tonics.pdf}
   \caption{A small portion of \tf space, including minor tonic chords.}
   \label{tfe:tf-minor-tonics}
 \end{figure}
 
-Figure \ref{tfe:tf-minor-tonics} shows a small portion of \tf space including
+Figure \ref{tfe:tf-minor-tonics} shows a small portion of \tf space that includes
 minor tonic chords (we might call it \tfo/i space). Because most jazz tunes do
 not contain exclusively minor chords, this figure gives both major and minor
 tonic chords in every key. The transformations defined in the previous
-paragraph are readily apparent in the space; worthy of special attention is
-the new relationship between a tonic minor-major seventh and the ii\tsup{7}
-chord a fifth below---between \h{CmM7} and \h{Cm7}, for example. Though we
+paragraph are readily apparent in the space, with the exception of the
+\textsc{7th} transformation from a minor-major seventh to a minor
+seventh---\h{GmM7} moving to \h{Gm7} as ii\tsup{7} of F major, for example. Though we
 will not do so here, determining how to fill in the figure with tritone
 substitutions, or to conform it around the circle of fifths in the manner of
 Figure \ref{tf:tf-circle-fifths}, is easy enough to imagine (if not to draw,
 given the added complexity of the minor-major sevenths).
 
-% need an example here: black orpheus?
+By way of a brief example, Figure \ref{tfe:solar-changes} gives the changes
+for Miles Davis's ``Solar.'' This tune is in C minor, though that is not
+immediately apparent from the changes themselves; in the canonical recording
+of this piece (from Davis's own \emph{Walkin'}), the C minor
+chords are played as minor-major sevenths, and the piece ends on a \h{CmM7}
+chord.\nocite{davis:walkin} The fact that the only tonic chord appears in the
+opening bar of the form gives performances of this tune a cyclical quality. By
+not arriving on a tonic at the end of the short 12-bar form, Davis achieves a
+formal overlap at every chorus: the opening tonic serves simultaneously as the
+harmonic resolution of the previous chorus and the formal beginning of the
+next.
+
+\begin{figure}[tbhp]
+  \centerGraphic[width=24em]{eps/ch2/solar-changes.pdf}
+  \caption{Changes to ``Solar'' (Miles Davis).}
+  \label{tfe:solar-changes}
+\end{figure}
+
+The analysis in \tf space is mostly unremarkable, but it is given in Figure
+\ref{tfe:solar-space}. Note that this figure has replaced \h{CM7} at the top
+of the space with a minor tonic, \h{CmM7}, and as such there is no arrow given
+between the C-minor tonic and V\tsup{7}/F. This analysis, though, is not
+possible in the \tf space of the previous section, since the C-minor harmony
+of the first bar is decidedly \emph{not} a ii\tsup{7} chord (there is no
+\Bflat\ major harmony in the piece at all).
+
+\begin{figure}[tbh]
+  \centerGraphic{eps/ch2/solar-space.pdf}
+  \caption{An analysis of ``Solar'' in \tf space, with C minor tonic.}
+  \label{tfe:solar-space}
+\end{figure}
 
 %}}}
 
