--- a/discog.bib
+++ b/discog.bib
@@ -44,6 +44,18 @@
   type        = {CD},
 }
 
+@music{davis:walkin,
+  author      = {Davis, Miles},
+  nameaddon   = {Miles Davis All Stars},
+  title       = {Walkin'},
+  userd       = {Prestige PRLP 7076,},
+  origdate    = {1957},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {OJCCD 213},
+  year        = {1991},
+  type        = {CD},
+}
+
 @music{guaraldi:flower,
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
