Reduce typographical impact in discography.
All of the record numbers looked terrible...obviously that's an
important thing to fix right now.

--- a/discog.bib
+++ b/discog.bib
@@ -3,76 +3,76 @@
 @music{coleman:amsterdam,
   author      = {Coleman, George},
   title       = {Amsterdam After Dark},
-  userd       = {Timeless SJP 129,},
+  userd       = {Timeless \abbrev{SJP} 129,},
   origdate    = {1979},
-  type        = {CD},
+  type        = {\abbrev{CD}},
   series      = {Reissued, Timeless Jazz Legacy},
-  number      = {TJL 74509},
+  number      = {\abbrev{TJL} 74509},
   year        = {2010},
 }
 
 @music{evans:heartsings,
   author      = {Evans, Bill},
   title       = {How My Heart Sings!},
-  userd       = {Riverside RLP 473,},
+  userd       = {Riverside \abbrev{RLP} 473,},
   origdate    = {1962},
   series      = {Reissued, Original Jazz Classics},
-  number      = {OJCCD 369-2},
+  number      = {\abbrev{OJCCD} 369-2},
   year        = {1995},
-  type        = {CD}
+  type        = {\abbrev{CD}}
 }
 
 @music{evans:portrait,
   author      = {Evans, Bill},
   title       = {Portrait in Jazz},
-  userd       = {Riverside RLP 12-315,},
+  userd       = {Riverside \abbrev{RLP} 12-315,},
   origdate    = {1960},
   series      = {Reissued, Original Jazz Classics},
-  number      = {OJCCD 088-2},
+  number      = {\abbrev{OJCCD} 088-2},
   year        = {1992},
-  type        = {CD}
+  type        = {\abbrev{CD}}
 }
 
 @music{davis:kindofblue,
   author      = {Davis, Miles},
   title       = {Kind of Blue},
-  userd       = {Columbia CL 1355,},
+  userd       = {Columbia \abbrev{CL} 1355,},
   origdate    = {1959},
   series      = {Reissued, Columbia/Legacy},
-  number      = {CJ 40579},
+  number      = {\abbrev{CJ} 40579},
   year        = {1992},
-  type        = {CD},
+  type        = {\abbrev{CD}},
 }
 
 @music{davis:walkin,
   author      = {Davis, Miles},
   nameaddon   = {Miles Davis All Stars},
   title       = {Walkin'},
-  userd       = {Prestige PRLP 7076,},
+  userd       = {Prestige \abbrev{PRLP} 7076,},
   origdate    = {1957},
   series      = {Reissued, Original Jazz Classics},
-  number      = {OJCCD 213},
+  number      = {\abbrev{OJCCD} 213},
   year        = {1991},
-  type        = {CD},
+  type        = {\abbrev{CD}},
 }
 
 @music{guaraldi:flower,
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
   series      = {Reissued, Original Jazz Classics},
-  number      = {OJCCD 235-2},
+  number      = {\abbrev{OJCCD} 235-2},
   year        = {1995},
   origdate    = {1958},
-  type        = {CD},
+  type        = {\abbrev{CD}},
   userd       = {Fantasy 3-257,}
 }
 
 @music{jamal:pershing,
   author      = {Jamal, Ahmad},
   title       = {Jamal at the Pershing, Vol. 2},
-  userd       = {Argo LP-667,},
+  userd       = {Argo \abbrev{LP}-667,},
   origdate    = {1961},
-  type        = {CD},
+  type        = {\abbrev{CD}},
   series      = {Available on \textit{Complete Live at the Pershing Lounge
                  1958}. Gambit},
   number      = {69264},
@@ -82,19 +82,19 @@
 @music{morgan:cornbread,
   author      = {Morgan, Lee},
   title       = {Cornbread},
-  userd       = {Blue Note BLP 4222,},
+  userd       = {Blue Note \abbrev{BLP} 4222,},
   origdate    = {1965},
-  type        = {CD},
+  type        = {\abbrev{CD}},
   series      = {Reissued, Blue Note},
-  number      = {BNZ 109},
+  number      = {\abbrev{BNZ} 109},
   year        = {1988},
 }
 
 @music{rodney:bird,
   author      = {Rodney, Red},
   title       = {One for Bird},
-  type        = {CD},
+  type        = {\abbrev{CD}},
   series      = {Steeplechase},
-  number      = {SCCD 31238},
+  number      = {\abbrev{SCCD} 31238},
   year        = {1989},
 }
