Start text on other kinds of tonics.

--- a/ch2.tex
+++ b/ch2.tex
@@ -745,6 +745,23 @@ of the first bar is decidedly \emph{not} a ii\tsup{7} chord (there is no
 
 % other kind of tonics (general ResI transformation)
 
+\subsection{Other Kinds of Tonic Chords}
+%{{{
+
+We have now solved the problem of tonic chords that happen to be minor-major
+seventh chords, but in fact the problem is more general: it would be nice to
+have some way of allowing for any kind of tonic chord we might find. As
+mentioned in Section \ref{sec:theoretical-approaches}, James McGowan has
+argued for what he calls three ``dialects of consonance'' in jazz (extended
+tones we might consider consonant): the added sixth, the minor seventh, and
+the major seventh.\footcite[76--79]{mcgowan:2005} Both of the approaches we
+have used so far have focused only on the major seventh, when it appears atop
+both major and minor triads. Many Tin Pan Alley tunes end with tonic add-6
+chords (which appear nowhere in \tf space), and as we noted in our discussion
+of ``Blues for Alice'', it is very common for a blues tonic to be a
+major-minor seventh chord (which appear only as V\tsup{7} chords in the space).
+
+%}}}
 % interaction with diatonic spaces
 
 
